# pocket-reform

./: .gitlab-ci.yml  LICENSE  README.md  install-fw-dependencies.sh  upload-fw.sh
pocket-reform-3d-printed-parts/battery-holder-2025-11-18/: Pocket_Batt_Holder_18_11_25_V3.stl  Pocket_Batt_Holder_18_11_25_V3_Mirrored.stl  Pocket_Batt_Holder_Remake.FCStd  Pocket_Batt_Holder_Remake_18_11_25_2.step
pocket-reform-case-202401-production/: ASSEMBLY_REV02_APPROVED_20240109.stp  pref-keyboard-bezel-20231115-chamfered_REV02_APPROVED_20240109.stp
pocket-reform-charger/: fp-lib-table  pocket-reform-charger.kicad_pcb  pocket-reform-charger.kicad_prl  pocket-reform-charger.kicad_pro  pocket-reform-charger.kicad_sch  sym-lib-table
pocket-reform-charger/lib/: pocket-reform-charger.kicad_sym
pocket-reform-charger/pocket-reform-charger.pretty/: MP2762A.kicad_mod  NXP_NX20P5090.kicad_mod  R_1206_3216Metric_Kelvin.kicad_mod  pocket-reform-charger-badge.kicad_mod
pocket-reform-keyboard-fw/pocket-hid/: CMakeLists.txt  HACKING.md  build-fw2.sh  build.sh  cppcheck.sh  description-release.html  ds20.quirk.tpl  flash.sh
pocket-reform-keyboard-fw/pocket-hid/inc/: tusb_config.h
pocket-reform-keyboard-fw/pocket-hid/src/: hardfault_handler.c  keyboard.h  leds.c  leds.h  main.c  matrix.h  matrix_anri.h  menu.c  oled.c  oled.h  pins.h  remote.c  tusb_config.h  usb_descriptors.c
pocket-reform-keyboard-kailh-ortho/: pocket-reform-kbd-mcu.kicad_sch  pocket-reform-keyboard-kailh-ortho.kicad_pro  pocket-reform-keyboard-kailh-ortho.kicad_sch  pref-kbd-backlight.kicad_sch
pocket-reform-keyboard-kailh-ortho/footprints/: pref-keyboard15-badge.kicad_mod
pocket-reform-motherboard/: pocket-reform-motherboard.kicad_pro  pocket-reform-motherboard.kicad_sch
pocket-reform-motherboard/3d-models/: HDMI-SMD_BX-HDMI-2-M19P.step  RET0040A.stp
pocket-reform-motherboard/footprints/: CONV_LM61495QRPHRQ1.kicad_mod  IC_LM73100RPWR.kicad_mod  IC_TMUXHS4446RETR.kicad_mod  pref-motherboard-badge.kicad_mod
pocket-reform-motherboard/lib/: LM73100RPWR.kicad_sym  TMUXHS4446RETR.kicad_sym
pocket-reform-shared-fw/inc/: mntre_reset_priv.h  mntre_usbids.h  reset_interface.h  usb_bos.h
pocket-reform-shared-fw/src/: reset_interface.c
pocket-reform-sysctl-fw/: .gitignore  CMakeLists.txt  README.md  build.sh  description-debug.html  description-release.html  ds20.quirk.tpl  flash.sh  install-fw-dependencies.sh  stdio_usb.c
pocket-reform-sysctl-fw/inc/: fusb302b.h  max17320.h  mp2650.h  pd.h  pd_com.h  reform_stdio_usb.h  spi_com.h  sysctl.h  tusb_config.h  uart_com.h
pocket-reform-sysctl-fw/src/: fusb302b.c  max17320.c  mp2650.c  pd_com.c  reform_stdio_usb.c  reset_interface.c  spi_com.c  sysctl.c  uart_com.c  usb_descriptors.c
pocket-reform-wifi/: nref-wifi-m2.kicad_pcb  nref-wifi-m2.kicad_sch  pocket-reform-wifi.kicad_pcb  pocket-reform-wifi.kicad_pro  pocket-reform-wifi.kicad_sch  sym-lib-table
pocket-reform-wifi/3d-models/: TPS62086RLTR.step  User Library-PCIe_M_2_Key-E_2230_RF.STEP  c-2199119-7-c-3d.stp
pocket-reform-wifi/footprints/: CONV_TPS62085RLTR.kicad_mod  Mounting_Sinhoo_SMTSO20.kicad_mod  TE_2199119-4.kicad_mod  nref-wifi-m2-badge.kicad_mod  pref-headset-badge.kicad_mod
pref-kbd-test/: kbdtest.sh
scripts/: cppcheck.sh  firmware_packager.py  generate-ds20.py  update-keyboard-firmware.sh  update-sysctl-firmware.sh
